ensure we do not kill symlinks

BUG: 498589